--- a/GPTPullRequestReview/package.json
+++ b/GPTPullRequestReview/package.json
@@ -4,21 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "update": "npx npm-check-updates -u"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "azure-pipelines-task-lib": "^4.3.1",
-    "binary-extensions": "^2.2.0",
-    "node-fetch": "^2.6.6",
-    "openai": "^3.2.1",
-    "simple-git": "^3.17.0"
+    "azure-pipelines-task-lib": "^4.17.3",
+    "binary-extensions": "^3.0.0",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.73.0",
+    "simple-git": "^3.27.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.3",
-    "@types/node-fetch": "^2.6.4",
-    "@types/q": "^1.5.5"
+    "@types/node": "^22.9.2",
+    "@types/node-fetch": "^2.6.12",
+    "@types/q": "^1.5.8",
+    "typescript": "^5.7.2"
   }
 }
