the task is able to run with Node 20

--- a/GPTPullRequestReview/tsconfig.json
+++ b/GPTPullRequestReview/tsconfig.json
@@ -2,7 +2,7 @@
   "include": ["./src/**/*"],
   "exclude": ["node_modules"],
   "compilerOptions": {
-    "module": "CommonJS",        // Use the latest ECMAScript module system
+    "module": "ES6",        // Use the latest ECMAScript module system
     "target": "ES6",        // Target the latest ECMAScript version
     "outDir": "./dist",        // Output directory for compiled files
     "moduleResolution": "Node",
