--- a/GPTPullRequestReview/package.json
+++ b/GPTPullRequestReview/package.json
@@ -2,6 +2,7 @@
   "name": "gptpullrequestreview",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "build": "tsc -p .",
@@ -13,7 +14,7 @@
   "dependencies": {
     "azure-pipelines-task-lib": "^4.17.3",
     "binary-extensions": "^3.0.0",
-    "node-fetch-commonjs": "^3.3.2",
+    "node-fetch": "^3.3.2",
     "openai": "^4.73.0",
     "simple-git": "^3.27.0"
   },
